# announcements

./: README.md  app.py  index.html  pyproject.toml  setup.sh
.github/workflows/: pipeline.yaml
app/: 📈_Overview.py
app/pages/: 📄_Data.py
data/: cases.csv  cases.parquet  files.csv  files.parquet  labels.parquet
exploration/: eda.py
scripts/: 0_bulk_download.ipynb  0_bulk_download.py  1_bulk_label.ipynb  1_bulk_label.py  2_rss.py
slides/: overview-app.drawio  overview.drawio  slides.html  slides.qmd
src/samruni/: data.py
