[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samruni"
version = "0.0.0.9000"
description = "A small package to process mergers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense",
    "Operating System :: OS Independent",
]
dependencies = [
    "bs4",
    "feedparser",
    "pandas[parquet]",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest"
]